Secret cannot be null

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -167,4 +167,4 @@ ice_minerva_client:
 ice_mercury_client:
     username: %mercury_api_username%
     password: %mercury_api_password%
-    gateway_secret: ~
+    gateway_secret: secret
