Update for Symfony 2.2, add PHP 5.5 compatibility

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -23,6 +23,7 @@ security:
             form_login:
                 provider: fos_userbundle
                 csrf_provider: form.csrf_provider
+                check_path: /fos_user/login_check
             logout:       true
             anonymous:    true
         user_authenticate:
