--- a/composer.json
+++ b/composer.json
@@ -8,25 +8,25 @@
         }
     },
     "require": {
-        "php": ">=5.3.3",
-        "symfony/symfony": "2.1.*",
+        "php": ">=5.4.0",
+        "symfony/symfony": "2.2.*",
         "doctrine/orm": ">=2.2.3,<2.4-dev",
-        "doctrine/doctrine-bundle": "1.1.*",
+        "doctrine/doctrine-bundle": "~1.2",
         "twig/extensions": "1.0.*",
         "symfony/assetic-bundle": "2.1.*",
         "symfony/swiftmailer-bundle": "2.1.*",
-        "symfony/monolog-bundle": "2.1.*",
-        "sensio/distribution-bundle": "2.1.*",
-        "sensio/framework-extra-bundle": "2.1.*",
-        "sensio/generator-bundle": "2.1.*",
+        "symfony/monolog-bundle": "2.2.*",
+        "sensio/distribution-bundle": "~2.2",
+        "sensio/framework-extra-bundle": "~2.2",
+        "sensio/generator-bundle": "~2.2",
         "jms/security-extra-bundle": "1.4.*",
         "jms/di-extra-bundle": "1.3.*",
         "kriswallsmith/assetic": "1.1.*",
-        "misd/guzzle-bundle": "1.0.*",
+        "misd/guzzle-bundle": "~1.1",
         "guzzle/guzzle": "3.4.*",
         "jms/serializer-bundle": "*",
         "jms/serializer": "*",
-        "friendsofsymfony/rest-bundle": "0.11.*",
+        "friendsofsymfony/rest-bundle": "~0.12",
         "doctrine/doctrine-fixtures-bundle": "*",
         "doctrine/data-fixtures": "*",
         "liip/functional-test-bundle": "1.0.*",
@@ -39,14 +39,13 @@
         "ice/mercuryclient-bundle": "2.*",
         "ice/minervaclient-bundle": "~1.9",
         "lexik/form-filter-bundle": "~1.2.0",
-
         "sonata-project/cache-bundle": "*",
         "sonata-project/block-bundle": "*",
         "sonata-project/jquery-bundle": "*",
         "knplabs/knp-menu-bundle": "*",
         "sonata-project/exporter": "*",
-        "sonata-project/admin-bundle": "*",
-        "sonata-project/doctrine-orm-admin-bundle": "2.1.x-dev"
+        "sonata-project/admin-bundle": "~2.2",
+        "sonata-project/doctrine-orm-admin-bundle": "~2.2"
     },
     "require-dev": {
         "behat/behat": "2.4.*",
