Add functionality to attach files to emails

--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -41,3 +41,7 @@ ice_mercury_client:
 #IceVeritasClient configuration
 ice_veritas_client:
     base_url: https://veritas.dev.ice.internal.admin.cam.ac.uk/app_dev.php/api/
+
+#Ice CDN
+ice_mailer:
+    cdn_base_url: https://www.ice.cam.ac.uk/institute-media/ctms/pdfs/
