--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -34,3 +34,7 @@ ice_minerva_client:
 #IceVeritasClient configuration
 ice_veritas_client:
     base_url: https://veritas.ice.cam.ac.uk/api/
+
+#Ice CDN
+ice_mailer:
+    cdn_base_url: https://www.ice.cam.ac.uk/institute-media/ctms/pdfs/
