--- a/shippable.yml
+++ b/shippable.yml
@@ -4,6 +4,9 @@ build_environment: Ubuntu 14.04
 # language setting
 language: php
 
+# cache dependencies between builds
+cache: true
+
 # php tag
 php:
  - 5.4
