--- a/shippable.yml
+++ b/shippable.yml
@@ -18,9 +18,10 @@ env:
 
 install:
  - mv app/config/parameters.yml.dist app/config/parameters.yml
- - composer self-update
- - composer config -g github-oauth.github.com $GITHUB_OAUTH -vvv
- - composer install --prefer-dist
+ - curl -sS https://getcomposer.org/installer | php
+ - ./composer.phar self-update
+ - ./composer.phar config github-oauth.github.com $GITHUB_OAUTH -vvv
+ - ./composer.phar install --prefer-dist
  - php app/console cache:clear --env=test
  - mkdir -p shippable/testresults
 
