--- a/shippable.yml
+++ b/shippable.yml
@@ -18,10 +18,9 @@ env:
 
 install:
  - mv app/config/parameters.yml.dist app/config/parameters.yml
- - curl -sS https://getcomposer.org/installer | php
- - ./composer.phar self-update
- - ./composer.phar config github-oauth.github.com $GITHUB_OAUTH -vvv
- - ./composer.phar install --prefer-dist
+ - composer.phar self-update
+ - composer.phar config github-oauth.github.com $GITHUB_OAUTH -vvv
+ - composer.phar install --prefer-dist
  - php app/console cache:clear --env=test
  - mkdir -p shippable/testresults
 
