--- a/shippable.yml
+++ b/shippable.yml
@@ -19,7 +19,7 @@ env:
 install:
  - mv app/config/parameters.yml.dist app/config/parameters.yml
  - composer self-update
- - composer config github-oauth.github.com $GITHUB_OAUTH -vvv
+ - composer config -g github-oauth.github.com $GITHUB_OAUTH -vvv
  - composer install --prefer-dist
  - php app/console cache:clear --env=test
  - mkdir -p shippable/testresults
